<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aya.vectordrawable.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_view_text"
        android:text="@string/image_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_cat_black_24dp"
        android:layout_below="@+id/image_view_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/image_view" />

    <TextView
        android:text="@string/image_view_tint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/image_view_tint_text" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_cat_black_24dp"
        android:tint="@color/colorAccent"
        android:layout_below="@+id/image_view_tint_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/image_view_tint" />

    <TextView
        android:text="@string/image_view_rotation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_tint"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/image_view_rotation1_text" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_cat_rotation_black_24dp"
        android:layout_below="@+id/image_view_rotation1_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/image_view_rotation1" />

    <TextView
        android:text="@string/image_view_rotation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_rotation1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/image_view_rotation2_text" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_cat_black_24dp"
        android:rotation="45"
        android:pivotX="200.0"
        android:pivotY="190.0"
        android:layout_below="@+id/image_view_rotation2_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/image_view_rotation2" />

    <TextView
        android:text="@string/image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_rotation2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/image_button_text" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_cat_black_24dp"
        android:layout_below="@+id/image_button_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/image_button" />

    <TextView
        android:text="@string/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/text_view_text" />

    <TextView
        android:text="@string/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/text_view"
        android:drawableStart="@drawable/ic_cat_black_24dp"/>

</RelativeLayout>
